Completed OpenAPI Spec, finalized controllers and services
